correction : margin / gap

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     "d1 d1 d2"
     "d3 d4 d2"
     "d3 d5 d5";
+  gap: 10px;
 }
 
 div:nth-child(1) {
@@ -30,6 +31,9 @@ div:nth-child(5) {
   grid-area: d5;
 }
 
+/*
 div {
   margin: 10px;
 }
+
+*/
